# metalscribe

./: .gitignore  CLAUDE.md  README.md  RELEASES.md  evaluate_models.py  pyproject.toml
.cursor/rules/: metalscribe.mdc
.github/: CODEOWNERS
.github/workflows/: ci.yml  homebrew-test.yml
Formula/: metalscribe.rb
docs/: TECHSPEC.md  api.md  architecture.md  data_models.md  development.md  homebrew-improvements.md  troubleshooting.md
docs/prompts/: README.md  refine.md
docs/prompts/pt-BR/: context-template.md  format-meeting-v1.md  format-meeting.md  refine.md
scripts/: install_all.sh  install_diarization_gpu.sh  install_whisper_gpu.sh
scripts/homebrew/: README.md  release.sh
src/metalscribe/: __init__.py  __main__.py  cli.py  config.py
src/metalscribe/adapters/: __init__.py  base.py  detector.py  importer.py  registry.py
src/metalscribe/commands/: __init__.py  combine.py  context.py  diarize.py  doctor.py  format_meeting.py  refine.py  run.py  run_meeting.py  transcribe.py
src/metalscribe/core/: __init__.py  audio.py  checks.py  context_validator.py  format_meeting.py  merge.py  models.py  prompt_loader.py  pyannote.py  refine.py  setup.py  whisper.py
src/metalscribe/exporters/: json_exporter.py  markdown_exporter.py  srt_exporter.py
src/metalscribe/llm/: __init__.py  auth.py  exceptions.py  provider.py
src/metalscribe/parsers/: __init__.py  (+2 more)
tests/: conftest.py
tests/unit/: test_config.py  test_context_commands.py  test_context_validator.py  test_exporters.py  test_format_meeting.py  test_merge.py  test_parsers.py  test_prompt_loader.py
(+8 files in other folders)
